# wtii

./: .gitignore  Cargo.toml  LICENSE.md  README.md  install  todo.org
src/: api.rs  creature.rs  keybindings.rs  lib.rs  main.rs  ui.rs
tests/: api.rs
tests/fixtures/: lots_of_resp.json  multiple_creatures_response.json  single_creature_response.json
