[package]
name = "wtii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
reqwest = { version = "0.12", features = ["json"] }
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
rand = "0.9.0"
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "macros"] }
mockito = "1.7.0"
tui-input = "0.11.1"
yaml-rust2 = "0.10.3"
